--- a/public/styles.css
+++ b/public/styles.css
@@ -1,16 +1,91 @@
+/* Font Family */
+@font-face {
+  font-family: 'Calibre-Regular';
+  src: url('./fonts/Calibre-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Calibre-Medium';
+  src: url('./fonts/CalibreWeb-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Calibre-Semibold';
+  src: url('./fonts/CalibreWeb-Semibold.woff') format('woff');
+}
+
+/* General Styling */
 input {
   width: 500px;
   height: 45px;
+}
+
+/* Class Styling */
+.navbar {
+  display: flex;
+  position: fixed;
+  width: 100%;
+}
+
+.navLeft {
+  display: flex;
+  flex: 1;
+}
+
+.navRight {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+  align-items: center;
+  flex: 1;
 }
 
 .search {
   font-size: 30px;
 }
 
-.zagat-logo-paths {
-  fill: #b70038;
+.searchBar {
+  border-right: 1px solid #d0d2d3;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.prompt {
+  flex: 1;
 }
 
 .logo {
   padding: 10px;
+  cursor: pointer;
+}
+
+.zagat-logo-paths {
+  fill: #b70038;
+}
+
+.latestMenu,
+.cityBestMenu,
+.currentLocationMenu {
+  font-style: normal;
+  font-variant-ligatures: normal;
+  font-variant-caps: normal;
+  font-variant-numeric: normal;
+  font-variant-east-asian: normal;
+  font-weight: normal;
+  font-stretch: normal;
+  font-size: 15px;
+  line-height: 20px;
+  font-family: 'Calibre-Medium';
+  padding-right: 23px;
+  padding-left: 23px;
+  letter-spacing: 0.086em;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding-left: 40px;
+  padding-right: 40px;
+  text-align: center;
+}
+
+zagat-logo-svg {
 }
