--- a/public/styles.css
+++ b/public/styles.css
@@ -35,6 +35,7 @@ input {
   display: flex;
   position: fixed;
   width: 100%;
+  z-index: 3;
 }
 
 .navLeft {
@@ -133,23 +134,6 @@ input {
 .cityBestMenu:hover,
 .currentLocationMenu:hover {
   color: #b70038;
-}
-
-.dropDownItem {
-  color: white !important;
-  background-color: #151518 !important;
-  font-style: normal;
-  font-variant-ligatures: normal;
-  font-variant-caps: normal;
-  font-variant-numeric: normal;
-  font-variant-east-asian: normal;
-  font-weight: normal;
-  font-stretch: normal;
-  font-size: 15px;
-  line-height: 20px;
-  font-family: 'Calibre-Regular';
-  letter-spacing: 0.013em;
-  text-transform: uppercase !important;
 }
 
 .text {
@@ -295,7 +279,6 @@ div {
 .dropDownLeftContainer {
   width: 720px;
   height: 500px;
-  background: red;
   flex-shrink: 0;
 }
 
@@ -306,13 +289,35 @@ div {
 .dropDownItem {
   color: #9b9b9b;
   background-color: black;
-  opacity: 0.9;
+  opacity: 0.95;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-bottom: 1px solid #d0d2d3;
   margin-top: 0px !important;
   margin-bottom: 0px !important;
+  padding: 15px;
+}
+
+.dropDownItem {
+  color: white !important;
+  background-color: #151518 !important;
+  font-style: normal;
+  font-variant-ligatures: normal;
+  font-variant-caps: normal;
+  font-variant-numeric: normal;
+  font-variant-east-asian: normal;
+  font-weight: normal;
+  font-stretch: normal;
+  font-size: 15px;
+  line-height: 20px;
+  font-family: 'Calibre-Regular';
+  letter-spacing: 0.013em;
+  text-transform: uppercase !important;
+}
+
+.dropDownItem:hover {
+  background-color: #3b3e43 !important;
 }
 
 .dropDownCity {
@@ -347,4 +352,63 @@ div {
   font-family: 'Calibre-Medium';
   color: #9b9b9b !important;
   letter-spacing: 0.061em !important;
+}
+
+.nearest {
+  background-color: #b70038 !important;
+  color: white;
+  line-height: 26px;
+  margin: 12px auto 2px;
+  vertical-align: middle;
+  width: 138px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  letter-spacing: 0.061em;
+  text-transform: uppercase;
+}
+
+.chevron {
+  /* transition: 'rotate' 2s linear;
+  transform: rotate(180deg); */
+  display: inline;
+  display: flex;
+  margin-left: 20px;
+  text-align: center;
+}
+
+.currentLocationMenu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.selectCity {
+  color: #9b9b9b !important;
+  background-color: #151518 !important;
+  opacity: 0.95;
+  font-style: normal;
+  font-variant-ligatures: normal;
+  font-variant-caps: normal;
+  font-variant-numeric: normal;
+  font-variant-east-asian: normal;
+  font-weight: normal;
+  font-stretch: normal;
+  font-size: 15px;
+  line-height: 20px;
+  font-family: 'Calibre-Regular';
+  letter-spacing: 0.013em;
+  text-transform: uppercase !important;
+  margin-top: 67px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: 1px solid #656666;
+  color: #9b9b9b;
+  line-height: 56px;
+  text-align: center;
+}
+
+.selectCity:hover {
+  background-color: #3b3e43 !important;
 }
