refactored using css components

--- a/client/src/styles/modal.css
+++ b/client/src/styles/modal.css
@@ -1,3 +1,28 @@
+@font-face {
+  font-family: 'Calibre-Regular';
+  src: url('./fonts/Calibre-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Calibre-Medium';
+  src: url('./fonts/CalibreWeb-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Calibre-Semibold';
+  src: url('./fonts/CalibreWeb-Semibold.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'DomaineText-Italic';
+  src: url('./fonts/DomaineTextWeb-RegularItalic.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'DomaineText-LightItalic';
+  src: url('./fonts/DomaineTextWeb-LightItalic.woff') format('woff');
+}
+
 .searchContainer {
   border-bottom: 1px solid #d0d2d3;
 }
@@ -57,7 +82,143 @@
   margin: auto;
 }
 
+.searchContainerModal {
+  border-right: 1px solid #d0d2d3;
+}
+
 input {
   width: 480px;
   height: 45px;
+}
+
+.header {
+  font-size: unset !important;
+}
+
+.bakerySVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.breakfastSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.brunchSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.chineseSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.dessertSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.frenchSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.italianSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.japaneseSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.mexicanSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.pizzaSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.seafoodSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.texMexSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.thaiSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.vegetarianSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.vietnameseSVG {
+  height: 60px;
+  width: 60px;
+  padding: 6px;
+}
+
+.search {
+  font-size: 30px;
+}
+
+.searchContainer {
+  border-bottom: 1px solid #d0d2d3;
+}
+
+.searchContainerModal {
+  border-right: 1px solid #d0d2d3;
+}
+
+.searchBar {
+  border-right: 1px solid #d0d2d3;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+}
+
+.searchSvg {
+  flex: 1;
+}
+
+.svgSearchContainer {
+  display: block;
+  margin: auto;
+}
+
+.prompt {
+  flex: 1;
+  border-bottom: 1px solid #d0d2d3;
+}
+
+.modalPrompt {
+  width: 300px !important;
 }
