--- a/client/src/styles/dropdown.css
+++ b/client/src/styles/dropdown.css
@@ -6,6 +6,9 @@
 .dropDownContainer {
   display: flex;
   align-items: center;
+  max-width: 500px;
+  z-index: 100;
+  float: right;
 }
 
 .dropDownLeftContainer {
@@ -16,6 +19,9 @@
 
 .dropDownDetails {
   flex: 1;
+  position: absolute;
+  right: 0;
+  max-width: 500px;
 }
 
 .dropDownItem {
@@ -43,7 +49,7 @@
   font-stretch: normal;
   font-size: 15px;
   line-height: 20px;
-  font-family: 'Calibre-Regular';
+  font-family: "Calibre-Regular";
   letter-spacing: 0.013em;
   text-transform: uppercase !important;
 }
@@ -64,7 +70,7 @@
   font-stretch: normal;
   font-size: 22px;
   line-height: 28px;
-  font-family: 'DomaineText-Italic' !important;
+  font-family: "DomaineText-Italic" !important;
   color: white !important;
   letter-spacing: normal !important;
 }
@@ -81,7 +87,7 @@
   font-stretch: normal;
   font-size: 14px;
   line-height: 20px;
-  font-family: 'Calibre-Medium';
+  font-family: "Calibre-Medium";
   color: #9b9b9b !important;
   letter-spacing: 0.061em !important;
 }
@@ -128,7 +134,7 @@
   font-stretch: normal;
   font-size: 15px;
   line-height: 20px;
-  font-family: 'Calibre-Regular';
+  font-family: "Calibre-Regular";
   letter-spacing: 0.013em;
   text-transform: uppercase !important;
   margin-top: 67px;
